# toy-app-back

./: LICENSE  pyproject.toml
app/: main.py
app/core/: config.py  db.py  dependencies.py
app/exceptions/: exception_handlers.py  exceptions.py
app/helpers/: jwt_helper.py  password_helper.py
app/models/: __init__.py  age_group.py  order.py  order_item.py  product.py  product_stock.py  product_type.py  review.py  user.py
app/repositories/: order_repository.py  product_repository.py  product_stock_repository.py  review_repository.py  user_repository.py
app/routers/: auth.py  order.py  pequla.py  product.py  review.py
app/schemas/: camel_case_model.py  order.py  product.py  review.py  user.py
app/services/: order_service.py  pequla_service.py  product_service.py  review_service.py  user_service.py
migrations/: env.py
migrations/versions/: 0e278b4a5742_update_orders_and_order_items.py  160c8e23e980_adding_product_stock_and_review_tables.py  2cdac0f51b7a_update_orders_and_orders_items_v2.py  315f94e34e1c_add_product_metadata_and_review_tables.py  6bf2df274870_fix_circular_import_and_models.py  7c7c141712b6_reverting_to_user_table.py  8acf147839a3_add_new_relation_productstock_and_.py  8dec9bc486f5_add_product_age_group_and_product_type_.py  a6032b5a3dc9_add_title_to_review.py  aff472cb6ffe_update_orders.py  c6bcc5a7a3c3_adding_product_stock_and_review_tables.py  cc91bc359e7c_create_orders_and_order_items.py  ccec1f6a9ca3_create_user_table.py  d2d0dbcf67de_fix_tables.py  eefdf38ee03d_add_product_age_group_and_product_type_.py  f1132be616de_fix_tables.py
